I am putting this on github
i hope it went on github

--- a/index.html
+++ b/index.html
@@ -10,59 +10,6 @@
 </head>
 
 <body>
-    <div class="container"> 
-        <!-- Header -->
-        <div class="row" style="height:75px;"></div>
-        <div class="row hdr">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-8">
-                <img class="img-responsive" src="img/header.png">
-            </div>
-            <div class="col-sm-2"></div>
-        </div>
-
-        <div class="row" style="height:20px;"></div>
-        
-        <!-- Options -->
-        <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4 text-center"> 
-                <div class="options">
-                    <a href="pages/portfolio.html"> PORTFOLIO </a>
-                </div>    
-            </div>
-            <div class="col-sm-4"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4 text-center"> 
-                <div class="options">
-                    <a href="pages/projects.html"> PROJECTS </a>
-                </div>    
-            </div>
-            <div class="col-sm-4"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4 text-center"> 
-                <div class="options">
-                    <a href="pages/about-me.html"> ABOUT ME </a>
-                </div>    
-            </div>
-            <div class="col-sm-4"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4 text-center"> 
-                <div class="options">
-                    <a href="pages/contact.html"> CONTACT </a>
-                </div>    
-            </div>
-            <div class="col-sm-4"></div>
-        </div>        
-    </div>      
+    pee pee poo poo (darin's version)
 </body>
 </html>
