--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Shash Comandur </title>
+    <title> In The Basement </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" href="img/FISHCOUPE ALPHA.png"/>
 </head>
 
 <body>
-    pee pee poo poo (darin's version)!
-    AIF JENKMlg'dfgibakpmoh LEE JENNINGS
-    
+    in the basement
+
 </body>
 
 </html>
