--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to the basement!">
     <title> In The Basement </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="img/FISHCOUPE ALPHA.png"/>
+    <link rel="shortcut icon" type="image/png" href="img/Staircase.png"/>
 </head>
 
 <body>
-    <img class="header-logo" src="img/Staircase.png">
-    in the basement
+    <div class="top_bar">
+        <img class="header-logo" src="img/Staircase.png">
+        in the basement
+    </div>
+    <p>
+        <h1>Most Recent Post:</h1>
+    </p>
 
 </body>
 
